[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"
 
[project]
name = "ai-security-openenv"
version = "1.0.0"
description = "OpenEnv environment for AI Security Policy Enforcement & Firewall Optimization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0.3",
    "openai>=1.3.9",
    "pyyaml>=6.0.1",
    "pydantic>=2.8.2",
    "numpy>=1.26.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gradio>=4.15.0",
]
 
[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
 
[tool.setuptools.packages.find]
where = ["."]
 
[project.urls]
Homepage = "https://huggingface.co/spaces/mveekshan12/ai-security-openenv"
