[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ai-security-openenv"
version = "1.0.0"
description = "OpenEnv environment for AI Security Policy Enforcement"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "flask>=3.0.3",
    "openai>=1.6.0",
    "pyyaml>=6.0.1",
    "pydantic>=2.11.10",
    "numpy>=1.26.3",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
serve = "server.app:main"
start = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Homepage = "https://huggingface.co/spaces/mveekshan12/ai-security-openenv"
